# numpyro_play

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  makefile  pyproject.toml
notebooks/: Bayesian_Naive_Bayes.ipynb  Bayesian_Naive_Bayes.py  Bayesian_Understanding_2_way_Interactions.ipynb  Causal_Inference_Toy_Example.ipynb  Chapter_2_MBML_SVI.ipynb  Chapter_2_MBML_SVI.py  Chapter_2_MBML_log_probability.ipynb  Chapter_2_MBML_log_probability.py  Chapter_2_MBML_numpyro_experiments.ipynb  Chapter_2_MBML_numpyro_experiments.py  Chapter_2_MBML_question_plate.ipynb  Config_Enumerate_in_Pyro.ipynb  Config_Enumerate_in_Pyro.py  DBDA-NumPyro-Chapter-20.ipynb  Gelman_arm_sim_statsmodels.ipynb  Gelman_arm_sim_statsmodels.py  NumPyro_Beta_Regression.ipynb  Section 3.6 of Chapter 3 - Inferences with binomials.ipynb  Section 3.6 of Chapter 3 - Inferences with binomials.py  Testable_Implications_Categorical_Predicators.ipynb  a_simple_example_8_schools.ipynb  a_simple_example_8_schools.py  baseball.ipynb  baseball.py  discrete_latent.ipynb  discrete_latent.py  numpyro_params.ipynb  numpyro_params.py  pyro_importance_sampling.ipynb  pyro_importance_sampling.py
numpyro_play/: __init__.py  port_ex_impt_sampling.py
tests/: test_numpyro_play.py  test_port_ex_impt_sampling.py
